--- a/templates/content.html
+++ b/templates/content.html
@@ -34,26 +34,16 @@
 
 <body>
 
+  <div class="menuaction">
 
-
-
-  <div class="menucontainer" style="border-bottom: solid 1px black;">
-
-
-    <a class="index" id="elem4" href="{{ url_for('database') }}" >←</a>
-
-  </div>
-
-  <div class="menuaction" style="border-bottom: solid 1px black; ">
-
-    <div id="wrapper">
+    <!-- <div id="wrapper">
       <div id="form">
         <form action="{{ url_for('delete') }}" method="POST">
           <input type="hidden" name="name" value="{{ name }}" />
           <button>delete</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </div>
 
 
