--- a/templates/content.html
+++ b/templates/content.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" ba>
+<html lang="en">
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -34,17 +33,7 @@
 
 <body>
 
-  <div class="menuaction">
-
-    <!-- <div id="wrapper">
-      <div id="form">
-        <form action="{{ url_for('delete') }}" method="POST">
-          <input type="hidden" name="name" value="{{ name }}" />
-          <button>delete</button>
-        </form>
-      </div>
-    </div> -->
-  </div>
+  <div class="menuaction"></div>
 
 
   <div class="data-container">
@@ -64,8 +53,6 @@
    $('.menucontainer').css('background-color', '#f6f6f6');
    $('#elem4').css('background-color', '#f6f6f6');
    $('#elem4').css('color', 'black');
-
-   
  </script>
 
 
